<resources>
    <string name="app_name">DAS_EntregaGrupal</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="logo_de_la_aplicacion">Logo de la Aplicacion</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="no_tiene_cuenta_aun">¿No tienes cuenta aún?</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="registrarme">Registrarme</string>
    <string name="jugar_contra_la_ia">Jugar contra la IA</string>
    <string name="opciones">Opciones</string>
    <string name="jugar_online">Jugar Online</string>
    <string name="jugar_2_jugadores">Jugar 2 jugadores</string>
    <string name="ayuda">Ayuda</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mis_mejores_puntuaciones">Mis Mejores Puntuaciones</string>
    <string name="personalizacion">Personalización</string>
    <string name="texto_ayuda"><![CDATA[Cómo jugar y ser el mejor Bichöte:\n \n Disponemos de un tablero el cual está formado con 6 filas y 7 columnas y, por tanto, dispondremos de un total de 42 casillas. \n El objetivo del juego es colocar 4 de nuestras fichas seguidas. Para ello, se puede tanto colocarlas horizontal, vertical o diagonalmente. Iremos colocando nuestras fichas por turnos, es decir, nosotros colocaremos una ficha y acto seguido, colocará nuestro adversario la suya y así sucesivamente. \n Debemos de tener en cuenta que, a la hora de colocar una ficha, elegiremos en qué columna deseamos colocarla. Para ello, debemos de estar atentos ya que la gravedad toma parte de nuestro juego. Esto significa que, si deseamos colocar una ficha en una columna, la ficha se colocará en la última posición libre de dicha columna. \n El primero en colocar 4 fichas seguidas será el vencedor y se proclamará como un auténtico Bichöte. \n Además, debes de tener en cuenta los eventos aleatorios que sucederán cada 5 turnos. Los eventos aleatorios que pueden transcurrir durante la partida son los siguientes:\n \n --> Piquete: El evento Pique consiste en una ficha que se colocará aleatoriamente en una de las casillas que se encuentren vacías de nuestro tablero, y la cual bloqueará dicha casilla. Esto es, se colocará un \'/\' que impedirá a ambos jugadores colocar una de sus fichas en dicha casilla. En añadido, esta ficha impedirá contabilizar las 4 fichas seguidas para conseguir la victoria si esta se encuentra en medio de dicha secuencia. Para ejemplificarlo: Si dispusiéramos de, | X | X | / | X | X | al tener una ficha Piquete en medio de la secuencia de 4 X seguidas, no se contabilizaría como 4 en raya. \n --> Rompecolumnas: Como bien indica su nombre, la función de este evento sería la de eliminar una columna aleatoria entera durante la partida. Podría darse el caso de que la columna que se borrara estuviera ya vacía, por lo que no se eliminaría ninguna ficha. Por otro lado, al tratarse de aleatoriedad, podría eliminar una columna con muchas fichas por parte de un único jugador beneficiando de esta forma al otro jugador. Pura suerte. \n --> Comeplomo: Se trata de una ficha la cual se nos otorgará a ambos jugadores a lo largo de la partida. Una vez que tengamos una de ellas en nuestra posesión, se nos preguntará al inicio de cada turno si deseamos usarla o no. El funcionamiento de esta ficha es el siguiente: Si deseamos usar la ficha especial y por lo tanto respondemos que si cuando nos preguntan si deseamos usarla, nos dejará la opción de seleccionar la columna donde deseamos usarla. Al indicar en que columna queremos usarla, se eliminarán las primeras 2 fichas que se encuentren consecutivas, es decir: Supongamos que tenemos una columna de 6 casillas, enumeradas del 1 al 6 comenzando desde abajo ascendentemente. Disponemos de una casilla Piquete (explicada anteriormente) en nuestra sexta casilla, es decir, en lo alto de la columna. Además, disponemos de dos fichas colocadas por los jugadores en las casillas 1 y 2, abajo de la columna. Si utilizamos la ficha Comeplomo, se eliminarán, por lo tanto, las 2 primeras fichas consecutivas, es decir, las 2 últimas fichas que se encontraban en la parte inferior de la columna. Sin embargo, si dispusiéramos de una ficha Piquete encima de nuestras 2 últimas fichas, al utilizar la ficha Comeplomos se eliminarían por lo tanto la ficha Piquete y la primera de las 2 fichas que se encontraban en la parte inferior de la columna. \n --> Viruseses: Este evento reiniciará el tablero entero, es decir, todas las fichas colocadas no habrán servido de nada ya que nuestro tablero se reiniciará como si fuera el primer turno. Sin embargo, las fichas como Comeplomo que pudiéramos haber conseguido con antelación seguiremos teniéndolas disponibles.]]></string>
    <string name="seleccionar_imagen_de_la_galeria">Seleccionar Imagen de la Galería</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="vs">VS</string>
    <string name="rendirse">Rendirse</string>
    <string name="jugar">Jugar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar_cambios">Aplicar Cambios</string>
    <string name="modo_facil">Modo Fácil</string>
    <string name="modo_dificil">Modo Difícil</string>
    <string name="selecciona_la_dificultad">Selecciona la dificultad</string>
    <string name="ayuda_en_partida"><![CDATA[\n Ayuda en partida:\n \n En la zona central de la pantalla tenemos el tablero donde se desarrollará la partida. El funcionamiento del juego es el siguiente:\n \n Disponemos de un tablero el cual está formado con 6 filas y 7 columnas y, por tanto, dispondremos de un total de 42 casillas. \n El objetivo del juego es colocar 4 de nuestras fichas seguidas. Para ello, se puede tanto colocarlas horizontal, vertical o diagonalmente. Iremos colocando nuestras fichas por turnos, es decir, nosotros colocaremos una ficha y acto seguido, colocará nuestro adversario la suya y así sucesivamente. Para visualizar a que jugador le toca introducri una ficha, en la parte superior del tablero se generará un texto indicando el nombre del jugador al que le corresponde el turno. \n Debemos de tener en cuenta que, a la hora de colocar una ficha, elegiremos en qué columna deseamos colocarla. Para ello, debemos de estar atentos ya que la gravedad toma parte de nuestro juego. Esto significa que, si deseamos colocar una ficha en una columna, la ficha se colocará en la última posición libre de dicha columna. \n El primero en colocar 4 fichas seguidas será el vencedor y se proclamará como un auténtico Bichöte.\n Además, debes de tener en cuenta los eventos aleatorios que sucederán cada 5 turnos. Estos eventos se mostrarán a partir de un texto en la parte superior de la pantalla. Los eventos aleatorios que pueden transcurrir durante la partida son los siguientes:\n \n --> Piquete: El evento Pique consiste en una ficha que se colocará aleatoriamente en una de las casillas que se encuentren vacías de nuestro tablero, y la cual bloqueará dicha casilla. Esto es, se colocará un \'/\' que impedirá a ambos jugadores colocar una de sus fichas en dicha casilla. En añadido, esta ficha impedirá contabilizar las 4 fichas seguidas para conseguir la victoria si esta se encuentra en medio de dicha secuencia. Para ejemplificarlo: Si dispusiéramos de, | X | X | / | X | X | al tener una ficha Piquete en medio de la secuencia de 4 X seguidas, no se contabilizaría como 4 en raya. \n --> Rompecolumnas: Como bien indica su nombre, la función de este evento sería la de eliminar una columna aleatoria entera durante la partida. Podría darse el caso de que la columna que se borrara estuviera ya vacía, por lo que no se eliminaría ninguna ficha. Por otro lado, al tratarse de aleatoriedad, podría eliminar una columna con muchas fichas por parte de un único jugador beneficiando de esta forma al otro jugador. Pura suerte. \n --> Viruseses: Este evento reiniciará el tablero entero, es decir, todas las fichas colocadas no habrán servido de nada ya que nuestro tablero se reiniciará como si fuera el primer turno. Sin embargo, las fichas como Comeplomo que pudiéramos haber conseguido con antelación seguiremos teniéndolas disponibles.\n --> Comeplomo: Se trata de una ficha la cual se nos otorgará a ambos jugadores a lo largo de la partida. Una vez que tengamos una de ellas en nuestra posesión, se nos preguntará al inicio de cada turno si deseamos usarla o no. Además, para saber cuantas de estas fichas disponemos, nos encontraremos con un contador en la parte inferior izquierda de la interfaz. Cuando dispongamos de alguna ficha, se iluminará este botón. En caso de querer usarla, bastará con pulsar dicho botón. El funcionamiento de esta ficha es el siguiente: Si deseamos usar la ficha especial, nos dejará la opción de seleccionar la columna donde deseamos usarla. Al indicar en que columna queremos usarla, se eliminarán las primeras 2 fichas que se encuentren consecutivas, es decir: Supongamos que tenemos una columna de 6 casillas, enumeradas del 1 al 6 comenzando desde abajo ascendentemente. Disponemos de una casilla Piquete (explicada anteriormente) en nuestra sexta casilla, es decir, en lo alto de la columna. Además, disponemos de dos fichas colocadas por los jugadores en las casillas 1 y 2, abajo de la columna. Si utilizamos la ficha Comeplomo, se eliminarán, por lo tanto, las 2 primeras fichas consecutivas, es decir, las 2 últimas fichas que se encontraban en la parte inferior de la columna. Sin embargo, si dispusiéramos de una ficha Piquete encima de nuestras 2 últimas fichas, al utilizar la ficha Comeplomos se eliminarían por lo tanto la ficha Piquete y la primera de las 2 fichas que se encontraban en la parte inferior de la columna.]]></string>
    <string name="mis_puntuaciones">Mis Puntuaciones</string>
    <string name="quieres_cambiar_tu_contrasena">¿Quieres cambiar tu contraseña?</string>
    <string name="ayuda_puntuaciones"><![CDATA[Ayuda:\nEn la parte superior se puede observar la puntuación general que tienes.\nEn la parte inferior, aparece el ranking de los 5 jugadores con mayor puntuaje en el juego.]]></string>
    <string name="introduzca_su_nueva_contrasena">Introduzca su nueva contraseña</string>
    <string name="repita_la_contrasena">Repita la contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="proximamente">¡Próximamente!</string>
    <string name="seguimos_trabajando_en_ello_disculpen_las_molestias">Seguimos trabajando en ello... disculpen las molestias</string>
    <string name="mis_amigos">Mis Amigos</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="buscar_amigos">Buscar amigos</string>
</resources>