<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoopciones"
    tools:context=".Complementos.Opciones">

    <ImageView
        android:id="@+id/ivLogoOpciones"
        android:layout_width="192dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/logoext" />

    <Button
        android:id="@+id/bAyuda"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/khand_light"
        android:text="@string/ayuda"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAmigos"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/bPerfil"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/khand_light"
        android:text="@string/mi_perfil"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoOpciones"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bAmigos"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/khand_light"
        android:text="@string/mis_amigos"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bMPuntuaciones"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/bMPuntuaciones"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/khand_light"
        android:text="@string/mis_puntuaciones"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bPerfil"
        app:layout_constraintVertical_bias="0.072" />

    <ImageButton
        android:id="@+id/iVolver"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#000000"
        android:textColor="#FFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAyuda"
        app:layout_constraintVertical_bias="0.257"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>