<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodialogodificultad">

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="260dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tDificultad"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/khand_light"
            android:text="@string/modo_facil"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbDificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:fontFamily="@font/khand_light"
            android:text="@string/modo_dificil"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tDificultad"
        android:layout_width="238dp"
        android:layout_height="37dp"
        android:fontFamily="@font/khand_light"
        android:gravity="center"
        android:text="@string/selecciona_la_dificultad"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroup"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>