<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomiperfil"
    tools:context=".Complementos.MiPerfil">

    <ImageButton
        android:id="@+id/iEliminarFoto"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:backgroundTint="#000000"
        android:tint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/iCambiarFoto"
        app:layout_constraintEnd_toStartOf="@+id/iCambiarFoto"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iFotoDePerfil"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/tvCambiarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/khand_light"
        android:text="@string/quieres_cambiar_tu_contrasena"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bModificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCumpleanosMP"
        app:layout_constraintVertical_bias="0.435" />

    <ImageButton
        android:id="@+id/bAtras3"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:background="#00FFFFFF"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/tvNombreMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreUsuarioMP2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etNombreMP"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:ems="10"
        android:fontFamily="@font/khand_light"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreMP"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNombreUsuarioMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/nombre_de_usuario"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iFotoDePerfil"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/tvNombreUsuarioMP2"
        android:layout_width="238dp"
        android:layout_height="38dp"
        android:fontFamily="@font/khand_light"
        android:text="@string/nombre_de_usuario"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombreUsuarioMP"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreUsuarioMP"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCumpleanosMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/fecha_de_nacimiento"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreMP"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etCumpleanosMP"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/khand_light"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCumpleanosMP"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iFotoDePerfil"
        android:layout_width="279dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/perfil" />

    <Button
        android:id="@+id/bModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/khand_light"
        android:text="@string/aplicar_cambios"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCumpleanosMP"
        app:layout_constraintVertical_bias="0.879" />

    <ImageButton
        android:id="@+id/iCambiarFoto"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iFotoDePerfil"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_popup_sync" />

</androidx.constraintlayout.widget.ConstraintLayout>